--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
